--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^6.20.1",
     "date-fns": "^2.30.0",
     "xlsx": "^0.18.5"
+    ,
+    "exceljs": "^4.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
