--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@supabase/supabase-js": "^2.39.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.11.2",
+    "date-fns": "^2.30.0",
+    "exceljs": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "date-fns": "^2.30.0",
+    "react-select": "^5.10.2",
     "xlsx": "^0.18.5"
-    ,
-    "exceljs": "^4.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
