--- a/sistema-contable/package.json
+++ b/sistema-contable/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "react-select": "^5.10.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
